--- a/assets/main.css
+++ b/assets/main.css
@@ -676,7 +676,7 @@ body {
 
 .prose :where(h1):not(:where([class~="not-prose"] *)) {
   color: var(--tw-prose-headings);
-  font-weight: 800;
+  font-weight: 600;
   font-size: 2.25em;
   margin-top: 0;
   margin-bottom: 0.8888889em;
@@ -1614,7 +1614,7 @@ article {
   font-size: 1.125rem;
   line-height: 1.75rem;
   line-height: 1.8;
-  --tw-text-opacity: 1;
+  --tw-text-opacity: .85;
   color: rgb(0 0 0 / var(--tw-text-opacity));
 }
 
