--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -83,6 +83,10 @@
   />
   {{ end }}
 
+  {{ range .Site.Params.custom_css -}}
+    <link rel="stylesheet" href="{{ . | absURL }}">
+  {{- end }}
+
   <!-- Misc -->
   {{ if or hugo.IsProduction (eq site.Params.env "production") }}
   <!---->
