--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -55,7 +55,7 @@
   {{ end }}
   <h2 class="!my-0 pb-1 font-bold !leading-none">{{ .Title }}</h2>
   <time class="text-sm opacity-60"
-    >{{ .Date | time.Format ":date_medium" }}</time
+    >{{ .Page.Date.Format "January 2, 2006" }}</time
   >
   <a class="absolute inset-0 text-[0]" href="{{ .Permalink }}">{{ .Title }}</a>
 </section>
