--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -7,7 +7,7 @@
     {{ if ne .Type "page" }}
     <div class="text-sm opacity-60">
       {{ if .Date }}
-      <time>{{ .Date | time.Format ":date_medium" }}</time>
+      <time>{{ .Page.Date.Format "January 2, 2006" }}</time>
       {{ end }}<!---->
       {{ $single_author := or .Params.Author site.Author.name }}
       <!---->
